--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "description": null,
   "version": "0.0.16",
   "dependencies": {
-    "recompose": "0.25.0",
+    "create-react-app": "^5.0.1",
+    "react": "15.5.3",
     "react-dom": "15.5.3",
-    "react": "15.5.3"
+    "recompose": "0.25.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
@@ -15,5 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/leinlin/react-flamegraph.git",
+  "author": "leinlin <345036769@qq.com>",
+  "license": "MIT"
 }
